force-app/main/default/objects/Employee__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>College Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>erewr</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>