force-app/main/default/objects/Employee__c/fields/Colors__c.field-meta.xml
<CustomField>
    <fullName>Colors__c</fullName>
    <label>Colors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>