force-app/main/default/objects/Employee__c/fields/Display_Month__c.field-meta.xml
<CustomField>
    <fullName>Display_Month__c</fullName>
    <formula>CASE( MONTH( Date_of_Birth__c ) , 1, &quot;January&quot;, 2,&quot;Febuary&quot;, &#39;none&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Month</label>
    <type>Text</type>
</CustomField>