force-app/main/default/objects/Employee__c/fields/Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Employee_No__c</fullName>
    <label>Employee No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>