force-app/main/default/objects/Employee__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sfsfd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>