force-app/main/default/objects/Employee__c/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <description>Employee Record Type1</description>
    <label>Employee</label>
</RecordType>