force-app/main/default/objects/Employee__c/recordTypes/Non_Employee.recordType-meta.xml
<RecordType>
    <fullName>Non_Employee</fullName>
    <active>true</active>
    <description>Non Employee Record Type2</description>
    <label>Non Employee</label>
</RecordType>