force-app/main/default/objects/Employee__c/validationRules/Same_Object_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Object_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Name==VLOOKUP(  $ObjectType.Employee__c.Fields.Name  ,   $ObjectType.Employee__c.Fields.Name  , Name), true, false)</errorConditionFormula>
    <errorMessage>Duplicate record found</errorMessage>
</ValidationRule>