force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Colors__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Employee_No__c</columns>
    <columns>Gender__c</columns>
    <columns>Email__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Test__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>